@@ -356,3 +356,5 @@ hacking/ChangeLog: the small scale changelog for libspectrum
 20070102 Makefile.am,internals.h,libspectrum.h.in,tape_accessors.{pl,txt},
 	 tape_block.[ch], tape_set.pl, tzx_read.c: sufficient 0x19
 	 functionality to allow tzxlist to do something with these blocks.
+20070104 internals.h,libspectrum.h.in,symbol_table.c,tape_block.[ch],
+	 tzx_read.c: next bit of 0x19 functionality.
